very alpha v0.0 of BM draft
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@28 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/kernelhelper/Makefile
+++ b/vidix/libdha/kernelhelper/Makefile
@@ -1,8 +1,9 @@
 KERNEL_INCLUDES = /usr/src/linux/include
 INCLUDES = -I$(KERNEL_INCLUDES)
-CFLAGS = -g -O2 -Wall -D__KERNEL__ -DMODULE -include $(KERNEL_INCLUDES)/linux/modversions.h
-VERSION = $(shell grep UTS_RELEASE $(KERNEL_INCLUDES)/linux/version.h | cut -d '"' -f2)
-MDIR = /lib/modules/$(VERSION)/misc
+CFLAGS = -O2 -Wall -D__KERNEL__ -DMODULE -include $(KERNEL_INCLUDES)/linux/modversions.h
+CONFIG_SHELL=/bin/sh -c
+KERNEL_VERSION=$(shell $(CONFIG_SHELL) 'uname -r')
+MDIR = /lib/modules/$(KERNEL_VERSION)/misc
 
 all: dhahelper.o test
 
@@ -16,6 +17,8 @@ install: dhahelper.o
 	if test ! -d $(MDIR) ; then mkdir -p $(MDIR) ; fi
 	install -m 644 dhahelper.o $(MDIR)/dhahelper.o
 	depmod -a
+nodes:
+	mknod -m 666 /dev/dhahelper c 180 0
 
 dep:
 
