cpu_flush support
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@118 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -11,7 +11,7 @@ SHORTNAME = libdha.so
 endif
 LIBNAME = libdha-$(VERSION).so
 
-SRCS=libdha.c mtrr.c pci.c pci_names.c mmi.c ports.c irq.c
+SRCS=libdha.c mtrr.c pci.c pci_names.c mmi.c ports.c irq.c cpu_flush.c
 OBJS=$(SRCS:.c=.o)
 
 CFLAGS  = $(OPTFLAGS) -fPIC -I. -I.. -Wall -W
