Don't create nodes under devfs.
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@124 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/kernelhelper/Makefile
+++ b/vidix/libdha/kernelhelper/Makefile
@@ -17,8 +17,10 @@ install: dhahelper.o
 	if test ! -d $(MDIR) ; then mkdir -p $(MDIR) ; fi
 	install -m 644 dhahelper.o $(MDIR)/dhahelper.o
 	depmod -a
-	rm -f /dev/dhahelper
-	mknod -m 666 /dev/dhahelper c 252 0
+	if [ ! -c /dev/.devfsd ]; then \
+	    rm -f /dev/dhahelper; \
+	    mknod -m 666 /dev/dhahelper c 252 0; \
+	fi
 
 
 nodes:
