--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -43,10 +43,10 @@ test:
 
 clean:
 	rm -f *.o *.so *~
-
-distclean:
-	rm -f Makefile.bak *.o *.so test *~ .depend
 	rm -f pci_dev_ids.c pci_ids.h pci_names.c pci_names.h pci_vendors.h pci.db
+
+distclean: clean
+	rm -f Makefile.bak .depend
 
 dep:    depend
 
