Add dependency pci_names.c: oth/pci.db
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@147 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -35,7 +35,7 @@ $(LIBNAME):     $(OBJS)
 
 all:    $(LIBNAME) $(SHORTNAME)
 
-pci_names.c:
+pci_names.c: oth/pci.db
 	$(AWK) -f pci_db2c.awk oth/pci.db
 
 test:
