Update for Linux 2.5.
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@161 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/kernelhelper/Makefile
+++ b/vidix/libdha/kernelhelper/Makefile
@@ -1,21 +1,37 @@
-KERNEL_INCLUDES = /usr/src/linux/include
+KERNEL_DIR = /usr/src/linux
+KERNEL_INCLUDES = $(KERNEL_DIR)/include
 INCLUDES = -I$(KERNEL_INCLUDES)
-CFLAGS = -O2 -Wall -D__KERNEL__ -DMODULE -include $(KERNEL_INCLUDES)/linux/modversions.h -fomit-frame-pointer -fno-common -fno-strict-aliasing
+CFLAGS = -O2 -Wall -D__KERNEL__ -DMODULE -fomit-frame-pointer -fno-common -fno-strict-aliasing -DKBUILD_BASENAME=dhahelper -DKBUILD_MODNAME=dhahelper
 CONFIG_SHELL=/bin/sh -c
 KERNEL_VERSION=$(shell $(CONFIG_SHELL) 'uname -r')
 MDIR = /lib/modules/$(KERNEL_VERSION)/misc
+MODPOST = $(KERNEL_DIR)/scripts/modpost
 
-all: dhahelper.o test
+all: test
 
 dhahelper.o: dhahelper.c dhahelper.h
 	$(CC) $(CFLAGS) $(INCLUDES) -c $(basename $@).c
 
+ifeq ($(wildcard $(MODPOST)),$(MODPOST))
+MODULE = dhahelper.ko
+
+dhahelper.ko: dhahelper.mod.o dhahelper.o
+	ld -r -o $@ $^
+
+dhahelper.mod.c: dhahelper.o
+	$(MODPOST) $(KERNEL_DIR)/vmlinux dhahelper.o
+else
+MODULE = dhahelper.o
+endif
+
+all: $(MODULE)
+
 test: test.c
 	$(CC) -g -O -Wall $(INCLUDES) -o $@ $@.c
 
-install: dhahelper.o
+install: $(MODULE)
 	if test ! -d $(MDIR) ; then mkdir -p $(MDIR) ; fi
-	install -m 644 dhahelper.o $(MDIR)/dhahelper.o
+	install -m 644 $(MODULE) $(MDIR)
 	depmod -a
 	if [ ! -c /dev/.devfsd ]; then \
 	    rm -f /dev/dhahelper; \
@@ -29,7 +45,7 @@ nodes:
 dep:
 
 clean: 
-	rm -f *.o *~
+	rm -f *.o *~ *.mod.* *.ko
 
 distclean: clean
 	rm -f test
