Update to Linux 2.6.
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@173 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/kernelhelper/Makefile
+++ b/vidix/libdha/kernelhelper/Makefile
@@ -1,46 +1,41 @@
-KERNEL_DIR = /usr/src/linux
+KERNEL_VERSION = $(shell uname -r)
+KERNEL_DIR = /lib/modules/$(KERNEL_VERSION)/build
+MDIR = /lib/modules/$(KERNEL_VERSION)/misc
+
+ifeq ($(findstring 2.6.,$(KERNEL_VERSION)),2.6.)
+MODULE = dhahelper.ko
+obj-m = dhahelper.o
+
+all:
+	@echo Please ignore warnings about overriding SUBDIRS
+	$(MAKE) -C $(KERNEL_DIR) SUBDIRS=$(PWD) modules
+else
 KERNEL_INCLUDES = $(KERNEL_DIR)/include
 INCLUDES = -I$(KERNEL_INCLUDES)
-CFLAGS = -O2 -Wall -D__KERNEL__ -DMODULE -fomit-frame-pointer -fno-common -fno-strict-aliasing -DKBUILD_BASENAME=dhahelper -DKBUILD_MODNAME=dhahelper
-CONFIG_SHELL=/bin/sh -c
-KERNEL_VERSION=$(shell $(CONFIG_SHELL) 'uname -r')
-MDIR = /lib/modules/$(KERNEL_VERSION)/misc
-MODPOST = $(KERNEL_DIR)/scripts/modpost
+CFLAGS = -O2 -Wall -D__KERNEL__ -DMODULE -fomit-frame-pointer -fno-common -fno-strict-aliasing
+MODULE = dhahelper.o
 
-all: test
+all: $(MODULE) test
 
 dhahelper.o: dhahelper.c dhahelper.h
 	$(CC) $(CFLAGS) $(INCLUDES) -c $(basename $@).c
-
-ifeq ($(wildcard $(MODPOST)),$(MODPOST))
-MODULE = dhahelper.ko
-
-dhahelper.ko: dhahelper.mod.o dhahelper.o
-	ld -r -o $@ $^
-
-dhahelper.mod.c: dhahelper.o
-	$(MODPOST) $(KERNEL_DIR)/vmlinux dhahelper.o
-else
-MODULE = dhahelper.o
 endif
-
-all: $(MODULE)
 
 test: test.c
 	$(CC) -g -O -Wall $(INCLUDES) -o $@ $@.c
 
 install: $(MODULE)
-	if test ! -d $(MDIR) ; then mkdir -p $(MDIR) ; fi
+	test -d $(MDIR) || mkdir -p $(MDIR)
 	install -m 644 $(MODULE) $(MDIR)
 	depmod -a
-	if [ ! -c /dev/.devfsd ]; then \
-	    rm -f /dev/dhahelper; \
-	    mknod -m 666 /dev/dhahelper c 252 0; \
+	if [ ! -c /dev/.devfsd ]; then		 \
+	    rm -f /dev/dhahelper;		 \
+	    mknod -m 600 /dev/dhahelper c 252 0; \
 	fi
 
 
 nodes:
-	echo Obsolete!!!
+	@echo make nodes is obsolete.
 
 dep:
 
