--- a/vidix/vidix/drivers/Makefile
+++ b/vidix/vidix/drivers/Makefile
@@ -77,7 +77,19 @@ UNICHROME_OBJS=unichrome_vid.o
 UNICHROME_LIBS=-L../../libdha -ldha
 UNICHROME_CFLAGS=$(OPTFLAGS) -fPIC -I. -I..
 
-all:    $(RADEON_VID) $(RAGE128_VID) $(MACH64_VID) $(NVIDIA_VID) $(GENFB_VID) $(MGA_VID) $(MGA_CRTC2_VID) $(MGA_TV_VID) $(PM3_VID) $(PM2_VID) $(SIS_VID) $(UNICHROME_VID)
+CYBERBLADE_VID=cyberblade_vid.so
+CYBERBLADE_SRCS=cyberblade_vid.c
+CYBERBLADE_OBJS=cyberblade_vid.o
+CYBERBLADE_LIBS=-L../../libdha -ldha -lm
+CYBERBLADE_CFLAGS=$(OPTFLAGS) -fPIC -I. -I..
+
+SAVAGE_VID=savage_vid.so
+SAVAGE_SRCS=savage_vid.c
+SAVAGE_OBJS=savage_vid.o
+SAVAGE_LIBS=-L../../libdha -ldha -lm
+SAVAGE_CFLAGS=$(OPTFLAGS) -fPIC -I. -I..
+
+all:    $(RADEON_VID) $(RAGE128_VID) $(MACH64_VID) $(NVIDIA_VID) $(GENFB_VID) $(MGA_VID) $(MGA_CRTC2_VID) $(MGA_TV_VID) $(PM3_VID) $(PM2_VID) $(SIS_VID) $(UNICHROME_VID) $(CYBERBLADE_VID) $(SAVAGE_VID)
 
 
 .SUFFIXES: .c .o
@@ -155,6 +167,18 @@ $(UNICHROME_OBJS):    $(UNICHROME_SRCS)
 
 $(UNICHROME_VID):     $(UNICHROME_OBJS)
 	$(CC) -shared $(UNICHROME_OBJS) $(UNICHROME_LIBS) -Wl,-soname,$(UNICHROME_VID) -o $(UNICHROME_VID) 
+
+$(CYBERBLADE_OBJS):    $(CYBERBLADE_SRCS)
+	$(CC) -c $(CYBERBLADE_CFLAGS) -o $@ $<
+
+$(CYBERBLADE_VID):     $(CYBERBLADE_OBJS)
+	$(CC) -shared $(CYBERBLADE_OBJS) $(CYBERBLADE_LIBS) -Wl,-soname,$(CYBERBLADE_VID) -o $(CYBERBLADE_VID)
+
+$(SAVAGE_OBJS):    $(SAVAGE_SRCS)
+	$(CC) -c $(SAVAGE_CFLAGS) -o $@ $<
+
+$(SAVAGE_VID):     $(SAVAGE_OBJS)
+	$(CC) -shared $(SAVAGE_OBJS) $(SAVAGE_LIBS) -Wl,-soname,$(SAVAGE_VID) -o $(SAVAGE_VID)
 
 clean:
 	rm -f *.o *.so *~
