x86_64 related fixes by Vadim Catana <vcatana@registru.md>
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@197 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/vidix/Makefile
+++ b/vidix/vidix/Makefile
@@ -14,7 +14,7 @@ DO_MAKE = @ for i in $(SUBDIRS); do $(MAKE) -C $$i $@ || exit; done
 SRCS    = vidixlib.c
 OBJS	= $(SRCS:.c=.o)
 
-CFLAGS  = $(OPTFLAGS) -W -Wall
+CFLAGS  = $(OPTFLAGS) -W -Wall -fPIC
 
 .SUFFIXES: .c .o
 
