--- a/vidix/vidix/drivers/Makefile
+++ b/vidix/vidix/drivers/Makefile
@@ -13,90 +13,91 @@ L_FLAGS=-soname $@
 LINKER=$(LD)
 endif
 
+COMMON_CFLAGS = -I. -I.. -Wall -W
 
 RADEON_VID=radeon_vid.so
 RADEON_SRCS=radeon_vid.c
 RADEON_OBJS=radeon_vid.o
 RADEON_LIBS=-L../../libdha -ldha -lm
-RADEON_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+RADEON_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 RAGE128_VID=rage128_vid.so
 RAGE128_SRCS=radeon_vid.c
 RAGE128_OBJS=rage128_vid.o
 RAGE128_LIBS=-L../../libdha -ldha
-RAGE128_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W -DRAGE128
+RAGE128_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS) -DRAGE128
 
 PM3_VID=pm3_vid.so
 PM3_SRCS=pm3_vid.c
 PM3_OBJS=pm3_vid.o
 PM3_LIBS=-L../../libdha -ldha
-PM3_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+PM3_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 PM2_VID=pm2_vid.so
 PM2_SRCS=pm2_vid.c
 PM2_OBJS=pm2_vid.o
 PM2_LIBS=-L../../libdha -ldha
-PM2_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+PM2_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 MACH64_VID=mach64_vid.so
 MACH64_SRCS=mach64_vid.c
 MACH64_OBJS=mach64_vid.o
 MACH64_LIBS=-L../../libdha -ldha
-MACH64_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W -DRAGE128
+MACH64_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS) -DRAGE128
 
 NVIDIA_VID=nvidia_vid.so
 NVIDIA_SRCS=nvidia_vid.c
 NVIDIA_OBJS=nvidia_vid.o
 NVIDIA_LIBS=-L../../libdha -ldha -lm
-NVIDIA_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+NVIDIA_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 GENFB_VID=genfb_vid.so
 GENFB_SRCS=genfb_vid.c
 GENFB_OBJS=genfb_vid.o
 GENFB_LIBS=-L../../libdha -ldha -lm
-GENFB_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+GENFB_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 MGA_VID=mga_vid.so
 MGA_SRCS=mga_vid.c
 MGA_OBJS=mga_vid.o
 MGA_LIBS=-L../../libdha -ldha -lm
-MGA_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+MGA_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 MGA_CRTC2_VID=mga_crtc2_vid.so
 MGA_CRTC2_SRCS=mga_vid.c
 MGA_CRTC2_OBJS=mga_crtc2_vid.o
 MGA_CRTC2_LIBS=-L../../libdha -ldha -lm
-MGA_CRTC2_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W -DCRTC2
+MGA_CRTC2_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS) -DCRTC2
 
 MGA_TV_VID=mga_tv_vid.so
 MGA_TV_SRCS=mga_vid.c
 MGA_TV_OBJS=mga_tv_vid.o
 MGA_TV_LIBS=-L../../libdha -ldha -lm
-MGA_TV_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W -DMGA_TV
+MGA_TV_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS) -DMGA_TV
 
 SIS_VID=sis_vid.so
 SIS_SRCS=sis_vid.c sis_bridge.c
 SIS_OBJS=sis_vid.o sis_bridge.o
 SIS_LIBS=-L../../libdha -ldha
-SIS_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+SIS_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 UNICHROME_VID=unichrome_vid.so
 UNICHROME_SRCS=unichrome_vid.c
 UNICHROME_OBJS=unichrome_vid.o
 UNICHROME_LIBS=-L../../libdha -ldha
-UNICHROME_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+UNICHROME_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 CYBERBLADE_VID=cyberblade_vid.so
 CYBERBLADE_SRCS=cyberblade_vid.c
 CYBERBLADE_OBJS=cyberblade_vid.o
 CYBERBLADE_LIBS=-L../../libdha -ldha -lm
-CYBERBLADE_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+CYBERBLADE_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 SAVAGE_VID=savage_vid.so
 SAVAGE_SRCS=savage_vid.c
 SAVAGE_OBJS=savage_vid.o
 SAVAGE_LIBS=-L../../libdha -ldha -lm
-SAVAGE_CFLAGS=$(OPTFLAGS) -I. -I.. -Wall -W
+SAVAGE_CFLAGS=$(OPTFLAGS) $(COMMON_CFLAGS)
 
 all:    $(RADEON_VID) $(RAGE128_VID) $(MACH64_VID) $(NVIDIA_VID) $(GENFB_VID) $(MGA_VID) $(MGA_CRTC2_VID) $(MGA_TV_VID) $(PM3_VID) $(PM2_VID) $(SIS_VID) $(UNICHROME_VID) $(CYBERBLADE_VID) $(SAVAGE_VID)
 
