backported some Makefile simplication rules from MPlayer tree
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@223 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -1,25 +1,41 @@
-# makefile
-
 include ../config.mak
 
-VERSION = 0.4
+NAME = libdha
+
+MAJOR_VERSION = 0
+MINOR_VERSION = 4
+VERSION = $(MAJOR_VERSION).$(MINOR_VERSION) 
 
 ifeq ($(TARGET_OS),CYGWIN)
-SHORTNAME = libdha.dll
-LIBNAME = libdha.dll
+SHORTNAME = $(_NAME).dll
 else
-SHORTNAME = libdha.so
-LIBNAME = libdha-$(VERSION).so
+SHORTNAME = $(NAME).so.$(MAJOR_VERSION)
+SONAME_FLAGS = -Wl,-soname,$(SHORTNAME)
+VSHORTNAME = $(NAME).so
+endif
+ifeq ($(TARGET_WIN32),yes)
+LIBNAME = $(NAME).a
+SHORTNAME = $(NAME).a
+else
+LIBNAME = $(NAME).so.$(VERSION)
 endif
 
-SRCS=libdha.c mtrr.c pci.c pci_names.c mmi.c ports.c irq.c cpu_flush.c
-OBJS=$(SRCS:.c=.o)
+SRCS = libdha.c \
+       mtrr.c \
+       pci.c \
+       pci_names.c \
+       mmi.c \
+       ports.c \
+       irq.c \
+       cpu_flush.c \
 
-CFLAGS  = $(OPTFLAGS) -I. -I.. -Wall -W
+OBJS = $(SRCS:.c=.o)
+
+CFLAGS = -fPIC -I. -I.. -Wall -W $(OPTFLAGS)
 ifneq ($(TARGET_OS),CYGWIN)
 CFLAGS += -fPIC
 endif
-LIBS = 
+
 ifeq ($(TARGET_OS),OpenBSD)
 ifeq ($(TARGET_ARCH_X86),yes)
 LIBS += -li386
@@ -30,50 +46,59 @@ endif
 
 # .PHONY: all clean
 
-.c.o:
+.c.o: pci_names.c
 	$(CC) -c $(CFLAGS) -o $@ $<
 
-$(LIBNAME):     $(OBJS)
-	$(CC) -shared -o $(LIBNAME) $(OBJS) $(LIBS)
+$(LIBNAME): $(OBJS)
+ifeq ($(TARGET_WIN32),yes)
+	$(AR) r $(LIBNAME) $(OBJS)
+else
+	$(CC) -shared -Wl,-soname -Wl,$(LIBNAME) -o $(LIBNAME) $(OBJS) $(LIBS)
 ifneq  ($(TARGET_OS),CYGWIN)
 	ln -sf $(LIBNAME) $(SHORTNAME)
+	ln -sf $(LIBNAME) $(VSHORTNAME)
 endif
+endif
+
 all:    $(LIBNAME) $(SHORTNAME)
 
 pci_names.c: oth/pci.db
-	$(AWK) -f pci_db2c.awk oth/pci.db
+	LC_ALL=C $(AWK) -f pci_db2c.awk $<
 
 test:
 	$(CC) test.c -o test $(SHORTNAME)
 
 clean:
-	rm -f *.o *.so *~
-	rm -f pci_dev_ids.c pci_ids.h pci_names.c pci_names.h pci_vendors.h pci.db
+	rm -f *.o *.a *.so.* *.so *~
+	rm -f pci_*.c pci_*.h pci.db
 
 distclean: clean
-	rm -f Makefile.bak .depend
+	rm -f .depend test
 
-dep:    depend
-
-depend:
+dep depend: pci_names.c
 	$(CC) -MM $(CFLAGS) $(SRCS) 1>.depend
 
 install:
+	-mkdir -p $(prefix)/lib
 	install -D -m 755 -s -p $(LIBNAME) $(prefix)/lib/$(LIBNAME)
-	rm -f $(prefix)/lib/libdha.so
-	ln -sf $(LIBNAME) $(prefix)/lib/libdha.so
+	rm -f $(prefix)/lib/$(NAME).so
+	ln -sf $(LIBNAME) $(prefix)/lib/$(SHORTNAME)
 ifeq ($(TARGET_OS),OpenBSD)
-	$(LDCONFIG) -R
+	-$(LDCONFIG) -R
 else
-	$(LDCONFIG)
+	-$(LDCONFIG)
 endif
+
 uninstall:
-	rm -f $(prefix)/lib/$(LIBNAME)
-	rm -f $(prefix)/lib/libdha.so
+	rm -f $(prefix)/lib/$(LIBNAME) $(prefix)/lib/$(SHORTNAME)
+	rm -f $(prefix)/lib/$(NAME).so
 	rmdir -p --ignore-fail-on-non-empty $(prefix)/lib
-#
-# include dependency files if they exist
-#
+ifeq ($(TARGET_OS),OpenBSD)
+	-$(LDCONFIG) -R
+else
+	-$(LDCONFIG)
+endif
+
 ifneq ($(wildcard .depend),)
 include .depend
 endif
