fix in variable name
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@230 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -7,7 +7,7 @@ MINOR_VERSION = 4
 VERSION = $(MAJOR_VERSION).$(MINOR_VERSION) 
 
 ifeq ($(TARGET_OS),CYGWIN)
-SHORTNAME = $(_NAME).dll
+SHORTNAME = $(NAME).dll
 else
 SHORTNAME = $(NAME).so.$(MAJOR_VERSION)
 SONAME_FLAGS = -Wl,-soname,$(SHORTNAME)
