unified version number for libdha and libvidix
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@258 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/vidix/Makefile
+++ b/vidix/vidix/Makefile
@@ -2,10 +2,7 @@ include ../config.mak
 
 NAME = libvidix
 
-MAJOR_VERSION = 0
-MINOR_VERSION = 9
-MICRO_VERSION = 9.3
-VERSION = $(MAJOR_VERSION).$(MINOR_VERSION).$(MICRO_VERSION)
+VERSION = $(VIDIX_VERSION_MAJOR).$(VIDIX_VERSION_MINOR).$(VIDIX_VERSION_MICRO)
 
 ifeq ($(TARGET_OS),CYGWIN)
 SHORTNAME = $(NAME).dll
