--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -2,9 +2,7 @@ include ../config.mak
 
 NAME = libdha
 
-MAJOR_VERSION = 0
-MINOR_VERSION = 4
-VERSION = $(MAJOR_VERSION).$(MINOR_VERSION) 
+VERSION = $(VIDIX_VERSION_MAJOR).$(VIDIX_VERSION_MINOR).$(VIDIX_VERSION_MICRO)
 
 ifeq ($(TARGET_OS),CYGWIN)
 SHORTNAME = $(NAME).dll
