fix in lib name generation
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@259 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -7,7 +7,7 @@ VERSION = $(VIDIX_VERSION_MAJOR).$(VIDIX_VERSION_MINOR).$(VIDIX_VERSION_MICRO)
 ifeq ($(TARGET_OS),CYGWIN)
 SHORTNAME = $(NAME).dll
 else
-SHORTNAME = $(NAME).so.$(MAJOR_VERSION)
+SHORTNAME = $(NAME).so.$(VIDIX_VERSION_MAJOR)
 SONAME_FLAGS = -Wl,-soname,$(SHORTNAME)
 VSHORTNAME = $(NAME).so
 endif
