--- a/vidix/vidix/Makefile
+++ b/vidix/vidix/Makefile
@@ -8,7 +8,7 @@ ifeq ($(TARGET_OS),CYGWIN)
 SHORTNAME = $(NAME).dll
 LIBNAME = $(NAME).dll
 else
-SHORTNAME = $(NAME).so.$(MAJOR_VERSION)
+SHORTNAME = $(NAME).so.$(VIDIX_VERSION_MAJOR)
 VSHORTNAME = $(NAME).so
 LIBNAME = $(NAME).so.$(VERSION)
 endif
