favtorize CFLAGS handling
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@260 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -29,7 +29,7 @@ SRCS = libdha.c \
 
 OBJS = $(SRCS:.c=.o)
 
-CFLAGS = -fPIC -I. -I.. -Wall -W $(OPTFLAGS)
+CFLAGS = -fPIC -I. -I.. $(OPTFLAGS)
 ifneq ($(TARGET_OS),CYGWIN)
 CFLAGS += -fPIC
 endif
