--- a/vidix/vidix/drivers/Makefile
+++ b/vidix/vidix/drivers/Makefile
@@ -6,7 +6,7 @@ OLDLIBDIR = $(prefix)/lib/mplayerxp/vidix
 VIDIX_LIBS = -L../../libdha -ldha
 VIDIX_LIBS_M = $(VIDIX_LIBS) -lm
 VIDIX_LIBS_X = $(VIDIX_LIBS_M) $(X_LIB)
-VIDIX_CFLAGS = -fPIC -I. -I.. -Wall -W $(OPTFLAGS)
+VIDIX_CFLAGS = -fPIC -I. -I.. $(OPTFLAGS)
 
 MACH64_CFLAGS = $(VIDIX_CFLAGS) -DRAGE128
 RAGE128_CFLAGS = $(VIDIX_CFLAGS) -DRAGE128
