avoid indirections in includes
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@271 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/vidix/Makefile
+++ b/vidix/vidix/Makefile
@@ -15,7 +15,7 @@ SRCS        = vidixlib.c
 OBJS_SHARED = vidixlib.o
 OBJS_STATIC = vidixlib_static.o
 
-CFLAGS  = $(OPTFLAGS) -fPIC
+CFLAGS  = $(OPTFLAGS) -I.. -fPIC
 
 ifeq ($(TARGET_OS),OpenBSD)
 LDCONFIG_FLAGS += -R
