cygwin compilation fixes
git-svn-id: https://svn.code.sf.net/p/vidix/code/trunk@303 84fa5670-3129-0410-a1ff-e783189bc518

--- a/vidix/libdha/Makefile
+++ b/vidix/libdha/Makefile
@@ -49,7 +49,7 @@ $(LIBNAME_STATIC): $(OBJS)
 	$(AR) r $@ $(OBJS)
 
 $(LIBNAME_WIN32): $(OBJS)
-	$(AR) r $@ $(OBJS)
+	$(CC) -shared -o $(LIBNAME_WIN32) $(OBJS) $(LIBS)
 
 LIB_TARGETS=
 ifeq ($(VIDIX_BUILD_SHARED),yes)
